--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="home_campaigns_title">Campaigns</string>
     <string name="error_view_try_again">Try Again</string>
     <string name="error_view_title">Error</string>
+    <string name="add_to_cart">Add to Cart</string>
+    <string name="buy">Order Now</string>
 </resources>
