--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,4 +9,7 @@
     <string name="cart_or_order_decision_message">Order now or add to cart?</string>
     <string name="error_dialog_title">Error</string>
     <string name="error_dialog_confirm">OK</string>
+    <string name="total_price_label">Total Price</string>
+    <string name="order">Order</string>
+    <string name="my_cart_title">My Cart</string>
 </resources>
