--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -39,4 +39,15 @@
     <string name="go_to_orders">Go to orders</string>
     <string name="campaign_details_title">Campaign Details</string>">
     <string name="campaign_details_data_null">The campaign is not found!</string>">
+    <string name="orders_screen_title">Orders</string>">
+    <string name="search_orders">Search Orders…</string>">
+    <string name="clear_search">Clear Search</string>">
+    <string name="statuses">Statuses</string>">
+    <string name="order_created_time_range">Order Created Time Range</string>">
+    <string name="start_date">Start Date</string>">
+    <string name="end_date">End Date</string>">
+    <string name="clear_all">Clear All</string>">
+    <string name="cancel">Cancel</string>">
+    <string name="ok">OK</string>">
+    <string name="filter_orders_dialog_title">Filter Orders</string>">
 </resources>
