--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,4 +60,10 @@
     <string name="last_update_time">Last Update Time</string>
     <string name="order_id">Order Id</string>
     <string name="confirm_received">Confirm Received</string>
+    <string name="yes">Yes</string>
+    <string name="no">No</string>
+    <string name="cancel_order_dialog_title">Cancel Order</string>
+    <string name="cancel_order_dialog_message">Your order will be cancelled. Do you really want to cancel it?</string>
+    <string name="confirm_order_received_dialog_title">Confirm Order Received</string>
+    <string name="confirm_order_received_dialog_message">Please confirm you have received your order.</string>
 </resources>
