--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,4 +84,5 @@
     <string name="start_delivery">Start Delivery</string>
     <string name="start_delivery_dialog_title">Start delivery</string>
     <string name="start_delivery_dialog_message">You are going to start delivery, do you really want to start it?</string>
+    <string name="detected_address_prefix">Detected Address: </string>
 </resources>
