--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -95,4 +95,5 @@
     <string name="notification_permission_cancel_button">Cancel</string>
     <string name="default_notification_channel_id" translatable="false">order_updates_channel</string>
     <string name="order_notification_channel_name">Order Updates</string>
+    <string name="cart_is_empty">Cart is empty</string>
 </resources>
